@@ -1,3 +1,6 @@
+Mon 17 Jul 2023 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
+	* Fix styles for sidebar and header
+
 Wed 14 Jul 2021 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
 	* Add extracted headings in documentation sidebar
 
